fixed bottom double border before

--- a/_basics.scss
+++ b/_basics.scss
@@ -121,8 +121,7 @@ footer {
 	    left: 0px;  
 	    border-top: solid 4px #f1f1f1;  
 	    width: 100%;  
-	    padding-bottom: 12px;  
-	    min-height: 100%;  
+	    padding-bottom: 1px;  
 	    z-index: 10;  
 	    @media (max-width: 500px){
 	    	top:-8px;
